--- a/package.json
+++ b/package.json
@@ -14,5 +14,13 @@
     "nodemon": "^2.0.12"
   },
   "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/LeandroRobles/Proyecto-4ta-entrega.git"
+  },
+  "bugs": {
+    "url": "https://github.com/LeandroRobles/Proyecto-4ta-entrega/issues"
+  },
+  "homepage": "https://github.com/LeandroRobles/Proyecto-4ta-entrega#readme",
   "description": ""
 }
